# bookvoice-studio

./: .gitignore  LICENSE  NOTICE.md  README.md  build_windows.bat  pyproject.toml  start_gui.bat
docs/: user-guide.md
docs/product/: 01-prd.md  02-mvp-scope.md  03-backlog.md  04-gui-interaction.md  05-ebook-parsing-strategy.md  06-audio-generation-strategy.md  07-exception-logging-strategy.md  08-roadmap.md  README.md
docs/release/: v1_acceptance_checklist.md
docs/superpowers/plans/: 2026-05-13-desktop-gui-and-voice-selection.md  2026-05-13-product-p0-implementation.md  2026-05-13-v1-stability-foundation.md
docs/superpowers/specs/: 2026-05-13-desktop-gui-and-voice-selection-design.md
example/: mc.epub
src/bookvoice/: __init__.py  audio_product.py  book.py  branding.py  calibre.py  chapter_selection.py  conversion_summary.py  converter.py  gui.py  gui_entry.py  gui_settings.py  health.py  main.py  onboarding.py  options.py  run_log.py  task_queue.py  utils.py  voices.py  windows_package.py
src/epub2mp3/: __init__.py  gui.py  gui_entry.py  main.py
tests/: test_audio_product.py  test_book.py  test_branding.py  test_calibre.py  test_chapter_selection.py  test_cli_parser.py  test_conversion_summary.py  test_converter_options.py  test_direct_script.py  test_gui_import.py  test_gui_layout.py  test_gui_pause.py  test_gui_settings.py  test_health.py  test_launcher.py  test_onboarding.py  test_options.py  test_run_log.py  test_task_queue.py  test_user_guide.py  test_utils_tempfiles.py  test_voices.py  test_windows_package.py
tools/: build_windows_exe.py
